updated text label orientation

--- a/barchart/Untitled0.ipynb
+++ b/barchart/Untitled0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:057bedc57b1d54374b58f375e777769e1b2e2e6415fcb9beb20666dcec908cbc"
+  "signature": "sha256:9671e74d3c62b57d5a91fd4ee7a4e0cf145bd8a9588b23df22d2732c332e4873"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -366,12 +366,23 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "states = states.drop(['AS','DC','FM','GU','MH','MP','PW','PR','VI'])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "states.to_csv('states.csv')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
