first radial heat chart created

--- a/bikeshare/bikeshare.ipynb
+++ b/bikeshare/bikeshare.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1078,6 +1078,228 @@
    ],
    "source": [
     "freq.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "freq = pd.read_csv('frequency_counts.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "full = freq['count_full']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "full = full.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10.0,\n",
+       " 9.0,\n",
+       " 10.0,\n",
+       " 10.0,\n",
+       " 9.0,\n",
+       " 8.0,\n",
+       " 13.0,\n",
+       " 19.0,\n",
+       " 88.0,\n",
+       " 108.0,\n",
+       " 92.0,\n",
+       " 93.0,\n",
+       " 69.0,\n",
+       " 82.0,\n",
+       " 99.0,\n",
+       " 76.0,\n",
+       " 67.0,\n",
+       " 67.0,\n",
+       " 87.0,\n",
+       " 114.0,\n",
+       " 89.0,\n",
+       " 82.0,\n",
+       " 64.0,\n",
+       " 51.0,\n",
+       " 29.0,\n",
+       " 25.0,\n",
+       " 26.0,\n",
+       " 26.0,\n",
+       " 25.0,\n",
+       " 31.0,\n",
+       " 26.0,\n",
+       " 20.0,\n",
+       " 13.0,\n",
+       " 11.0,\n",
+       " 12.0,\n",
+       " 8.0,\n",
+       " 9.0,\n",
+       " 6.0,\n",
+       " 3.0,\n",
+       " 4.0,\n",
+       " 3.0,\n",
+       " 8.0,\n",
+       " 13.0,\n",
+       " 15.0,\n",
+       " 16.0,\n",
+       " 22.0,\n",
+       " 25.0,\n",
+       " 14.0,\n",
+       " 8.0,\n",
+       " 10.0,\n",
+       " 11.0,\n",
+       " 11.0,\n",
+       " 11.0,\n",
+       " 10.0,\n",
+       " 12.0,\n",
+       " 14.0,\n",
+       " 47.0,\n",
+       " 92.0,\n",
+       " 84.0,\n",
+       " 56.0,\n",
+       " 53.0,\n",
+       " 59.0,\n",
+       " 44.0,\n",
+       " 34.0,\n",
+       " 45.0,\n",
+       " 30.0,\n",
+       " 62.0,\n",
+       " 78.0,\n",
+       " 68.0,\n",
+       " 49.0,\n",
+       " 47.0,\n",
+       " 29.0,\n",
+       " 24.0,\n",
+       " 22.0,\n",
+       " 21.0,\n",
+       " 22.0,\n",
+       " 22.0,\n",
+       " 25.0,\n",
+       " 25.0,\n",
+       " 19.0,\n",
+       " 44.0,\n",
+       " 80.0,\n",
+       " 67.0,\n",
+       " 61.0,\n",
+       " 49.0,\n",
+       " 38.0,\n",
+       " 45.0,\n",
+       " 60.0,\n",
+       " 57.0,\n",
+       " 58.0,\n",
+       " 71.0,\n",
+       " 71.0,\n",
+       " 62.0,\n",
+       " 49.0,\n",
+       " 53.0,\n",
+       " 35.0,\n",
+       " 15.0,\n",
+       " 14.0,\n",
+       " 15.0,\n",
+       " 16.0,\n",
+       " 15.0,\n",
+       " 15.0,\n",
+       " 16.0,\n",
+       " 17.0,\n",
+       " 33.0,\n",
+       " 77.0,\n",
+       " 67.0,\n",
+       " 53.0,\n",
+       " 42.0,\n",
+       " 42.0,\n",
+       " 40.0,\n",
+       " 35.0,\n",
+       " 25.0,\n",
+       " 28.0,\n",
+       " 56.0,\n",
+       " 59.0,\n",
+       " 56.0,\n",
+       " 45.0,\n",
+       " 41.0,\n",
+       " 29.0,\n",
+       " 23.0,\n",
+       " 23.0,\n",
+       " 26.0,\n",
+       " 27.0,\n",
+       " 25.0,\n",
+       " 26.0,\n",
+       " 25.0,\n",
+       " 26.0,\n",
+       " 20.0,\n",
+       " 18.0,\n",
+       " 16.0,\n",
+       " 24.0,\n",
+       " 34.0,\n",
+       " 67.0,\n",
+       " 53.0,\n",
+       " 40.0,\n",
+       " 56.0,\n",
+       " 46.0,\n",
+       " 44.0,\n",
+       " 56.0,\n",
+       " 58.0,\n",
+       " 51.0,\n",
+       " 36.0,\n",
+       " 24.0,\n",
+       " 22.0,\n",
+       " 18.0,\n",
+       " 20.0,\n",
+       " 24.0,\n",
+       " 24.0,\n",
+       " 27.0,\n",
+       " 23.0,\n",
+       " 15.0,\n",
+       " 11.0,\n",
+       " 11.0,\n",
+       " 14.0,\n",
+       " 29.0,\n",
+       " 22.0,\n",
+       " 32.0,\n",
+       " 42.0,\n",
+       " 37.0,\n",
+       " 49.0,\n",
+       " 51.0,\n",
+       " 42.0,\n",
+       " 23.0,\n",
+       " 10.0,\n",
+       " 6.0,\n",
+       " 2.0,\n",
+       " 1.0]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full"
    ]
   },
   {
