trying out the chord diagram

--- a/airlines/airline analysis.ipynb
+++ b/airlines/airline analysis.ipynb
@@ -951,6 +951,138 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "matrix = top_10.as_matrix().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[56.0,\n",
+       "  1227454.0,\n",
+       "  989058.0,\n",
+       "  897836.0,\n",
+       "  1293127.0,\n",
+       "  701878.0,\n",
+       "  901042.0,\n",
+       "  888865.0,\n",
+       "  575834.0,\n",
+       "  659568.0],\n",
+       " [1237623.0,\n",
+       "  190.0,\n",
+       "  964805.0,\n",
+       "  1480121.0,\n",
+       "  1921666.0,\n",
+       "  1144416.0,\n",
+       "  895274.0,\n",
+       "  639975.0,\n",
+       "  995254.0,\n",
+       "  910572.0],\n",
+       " [1016423.0,\n",
+       "  972014.0,\n",
+       "  530.0,\n",
+       "  1153797.0,\n",
+       "  840163.0,\n",
+       "  855128.0,\n",
+       "  666034.0,\n",
+       "  612910.0,\n",
+       "  655916.0,\n",
+       "  659250.0],\n",
+       " [890942.0,\n",
+       "  1441189.0,\n",
+       "  1163039.0,\n",
+       "  0.0,\n",
+       "  1598786.0,\n",
+       "  952554.0,\n",
+       "  935741.0,\n",
+       "  320907.0,\n",
+       "  803514.0,\n",
+       "  1187661.0],\n",
+       " [1297184.0,\n",
+       "  1907583.0,\n",
+       "  828679.0,\n",
+       "  1617983.0,\n",
+       "  696.0,\n",
+       "  589705.0,\n",
+       "  555443.0,\n",
+       "  995873.0,\n",
+       "  320654.0,\n",
+       "  553163.0],\n",
+       " [705150.0,\n",
+       "  1159791.0,\n",
+       "  860948.0,\n",
+       "  938658.0,\n",
+       "  590103.0,\n",
+       "  0.0,\n",
+       "  907665.0,\n",
+       "  297072.0,\n",
+       "  1102545.0,\n",
+       "  864486.0],\n",
+       " [917318.0,\n",
+       "  895659.0,\n",
+       "  679478.0,\n",
+       "  911712.0,\n",
+       "  556646.0,\n",
+       "  929020.0,\n",
+       "  0.0,\n",
+       "  460871.0,\n",
+       "  580698.0,\n",
+       "  649302.0],\n",
+       " [888889.0,\n",
+       "  651268.0,\n",
+       "  597424.0,\n",
+       "  335442.0,\n",
+       "  987189.0,\n",
+       "  303397.0,\n",
+       "  464947.0,\n",
+       "  0.0,\n",
+       "  484535.0,\n",
+       "  285709.0],\n",
+       " [577818.0,\n",
+       "  1024415.0,\n",
+       "  667383.0,\n",
+       "  795035.0,\n",
+       "  319293.0,\n",
+       "  1072726.0,\n",
+       "  576931.0,\n",
+       "  498528.0,\n",
+       "  41.0,\n",
+       "  681931.0],\n",
+       " [659989.0,\n",
+       "  932818.0,\n",
+       "  681608.0,\n",
+       "  1136116.0,\n",
+       "  549536.0,\n",
+       "  875879.0,\n",
+       "  659948.0,\n",
+       "  262282.0,\n",
+       "  688019.0,\n",
+       "  2428.0]]"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 189,
    "metadata": {
     "collapsed": true
@@ -967,6 +1099,28 @@
     ",'#2E8B57'\n",
     ",'#F4A460'\n",
     ",'#FA8072']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'/Users/admin/projects/interactives-course/airlines'"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
    ]
   },
   {
@@ -1013,131 +1167,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 201,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(colors[:10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 205,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cities = pd.DataFrame(top_10_cities, colors[:10])"
+    "cities = pd.DataFrame()\n",
+    "cities['name'] = top_10_cities\n",
+    "cities['color'] = colors[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 207,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>#9ACD32</th>\n",
-       "      <td>           Atlanta, GA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#377DB8</th>\n",
-       "      <td>           Chicago, IL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#F5DEB3</th>\n",
-       "      <td> Dallas/Fort Worth, TX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#EE82EE</th>\n",
-       "      <td>       Los Angeles, CA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#40E0D0</th>\n",
-       "      <td>          New York, NY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#FF6347</th>\n",
-       "      <td>            Denver, CO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#D8BFD8</th>\n",
-       "      <td>           Houston, TX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#D2B48C</th>\n",
-       "      <td>         Charlotte, NC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#4682B4</th>\n",
-       "      <td>           Phoenix, AZ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#00FF7F</th>\n",
-       "      <td>         Las Vegas, NV</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                             0\n",
-       "#9ACD32            Atlanta, GA\n",
-       "#377DB8            Chicago, IL\n",
-       "#F5DEB3  Dallas/Fort Worth, TX\n",
-       "#EE82EE        Los Angeles, CA\n",
-       "#40E0D0           New York, NY\n",
-       "#FF6347             Denver, CO\n",
-       "#D8BFD8            Houston, TX\n",
-       "#D2B48C          Charlotte, NC\n",
-       "#4682B4            Phoenix, AZ\n",
-       "#00FF7F          Las Vegas, NV"
-      ]
-     },
-     "execution_count": 204,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": []
+   "source": [
+    "cities.to_csv('cities.csv')"
+   ]
   }
  ],
  "metadata": {
